# moleculepoint-st

./: .gitignore  BASELINE_REFERENCES.md  README.md  REFERENCES_AND_DATASETS.md  pyproject.toml
.github/workflows/: ci.yml
baseline_runners/: README.md  run_segmented_reference_planted.py
evidence/: summary.json
scripts/: check_independence.sh
src/moleculepoint_st/: __init__.py  claim_status.py  cli.py  contracts.py  gate3.py  parity.py  point_stats.py  real_smoke.py  result_wiring.py  smoke.py  validation.py
tests/: test_brand_independence.py  test_claim_status_unlock.py  test_contracts.py  test_gate2_parity.py  test_gate3_analysis.py  test_planted_simulation.py  test_point_stats_smoke.py  test_real_data_smoke.py  test_results_contract_wiring.py
