[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "moleculepoint-st"
version = "0.1.0"
description = "Independent single-molecule point-pattern scaffold"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
moleculepoint-st = "moleculepoint_st.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
